--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -76,7 +76,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 1;
 }
 
 .gpt3__header-content__people img{
@@ -102,5 +102,64 @@
 
 .gpt3__header-image img{
     width: 100%;
-    height: 100%;
+    
+}
+
+@media screen and (max-width: 1050px) {
+    .gpt3__header{
+        flex-direction: column;
+    }
+
+    .gpt3__header-content{
+        margin: 0 0 3rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .gpt3__header h1{
+        font-size: 48px;
+        line-height: 60px;
+    }
+
+    .gpt3__header p{
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .gpt3__header-content__people{
+        flex-direction: column;
+    }
+
+    .gpt3__header-content__people p{
+        margin: 0;
+    }
+
+    .gpt3__header-content__input input,
+    .gpt3__header-content__input button
+    
+    {
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+
+@media screen and (max-width: 490px) {
+    .gpt3__header h1{
+        font-size: 36px;
+        line-height: 48px;
+    }
+
+    .gpt3__header p{
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .gpt3__header-content__input input,
+    .gpt3__header-content__input button
+    
+    {
+        font-size: 12px;
+        line-height: 16px;
+    }
 }
